--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.1.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE210</version>
+        </dependency>
     </dependencies>
 </project>
