--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         </dependency> 
         
         
-         <!--
+        <!--
        para consumo de apis externas openfeign
         -->
         <dependency>
@@ -83,10 +83,10 @@
             <version>4.1.3</version>
         </dependency>
         
-          <!--
+        <!--
        para consumo de apis externas retrofit2
         -->
-         <dependency>
+        <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
             <version>2.9.0</version>
@@ -98,5 +98,12 @@
             <version>2.9.0</version>
         </dependency>
         
+        
+        
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
     </dependencies>
 </project>
