--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
             <type>jar</type>
         </dependency> -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>6.2.8.Final</version>
         </dependency>
